# deleg8

./: .gitignore  Cargo.toml  README.md
node/: Cargo.toml
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
node/src/: lib.rs
pallet/: Cargo.toml
pallet/src/: lib.rs  tests.rs
pallets/v2/: Cargo.toml
pallets/v2/src/: lib.rs  tests.rs
