[package]
name = "delegate"
version = "0.0.2"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/4meta5/delegate"
description = "Delegate permissions with bounded hierarchy depth and span"
keywords = ["dock", "substrate"]

[dependencies]
parity-scale-codec = { version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-rc6", default-features = false }
sp-runtime = { version = "2.0.0-rc6", default-features = false }
frame-support = { version = "2.0.0-rc6", default-features = false }
frame-system = { version = "2.0.0-rc6", default-features = false }
pallet-balances = { version = "2.0.0-rc6", default-features = false }
orml-utilities = { version = "0.1.1", default-features = false }
clear_on_drop = { version = "0.2.4", features = ["no_cc"] } # https://github.com/paritytech/substrate/issues/4179

[dev-dependencies]
sp-io = { version = "2.0.0-rc6", default-features = false }
sp-core = { version = "2.0.0-rc6", default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "orml-utilities",
    "pallet-balances/std",
]
